# e2e-agent-platform

./: .env.example  .gitignore  Makefile  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.claude/: launch.json
apps/console/: .env.example  middleware.ts  next.config.mjs  package.json  tailwind.config.ts
apps/console/app/: globals.css  layout.tsx  page.tsx
apps/console/app/academy/: page.tsx
apps/console/app/academy/[stageId]/: page.tsx
apps/console/app/admin/prompts/: page.tsx
apps/console/app/api/academy/progress/: route.ts
apps/console/app/api/academy/status/: route.ts
apps/console/app/api/admin/dsar/: route.ts
apps/console/app/api/admin/retention/: route.ts
apps/console/app/api/artifacts/: route.ts
apps/console/app/api/audit/verify/: route.ts
apps/console/app/api/chat/: route.ts
apps/console/app/api/deploy/: route.ts
apps/console/app/api/dev-login/: route.ts
apps/console/app/api/eval/: route.ts
apps/console/app/api/ground/: route.ts
apps/console/app/api/operate/: route.ts
apps/console/app/api/projects/: route.ts
apps/console/app/api/prompts/: route.ts
apps/console/app/api/route/: route.ts
apps/console/app/api/shape/: route.ts
apps/console/app/api/specify/: route.ts
apps/console/app/hello/: page.tsx
apps/console/app/login/: actions.ts  page.tsx
apps/console/app/projects/: actions.ts  page.tsx
apps/console/app/projects/[slug]/: page.tsx
apps/console/app/projects/[slug]/architect/: page.tsx
apps/console/app/projects/[slug]/chat/: page.tsx
apps/console/app/projects/[slug]/evaluate/: page.tsx
apps/console/app/projects/[slug]/ground/: page.tsx
apps/console/app/projects/[slug]/operate/: page.tsx
apps/console/app/projects/[slug]/shape/: page.tsx
apps/console/app/projects/[slug]/specify/: actions.ts  page.tsx
apps/console/app/projects/new/: page.tsx
apps/console/components/: AcademyPath.tsx  AppShell.tsx  ArchitectCanvas.tsx  ArtifactEditor.tsx  ArtifactPayload.tsx  ChatView.tsx  EvaluatePanel.tsx  FeedbackMount.tsx  GroundPanel.tsx  HelloPanel.tsx  LineageView.tsx  Markdown.tsx  OperatePanel.tsx  PromptAdminPanel.tsx  ShapePanel.tsx
apps/console/lib/: academy.ts  auth.ts  data-rights.ts  db.ts  enablement.ts  ground.ts  json.ts  lineage.ts  oidc.ts  rbac.ts  session.ts  specify.ts  stages.ts
db/: migrate.mjs  package.json
db/migrations/: 0001_project.sql  0002_artifact.sql  0003_artifact_parent.sql  0004_kb_release.sql  0005_agent_version.sql  0006_policy_bundle.sql  0007_deployment.sql  0008_prompt_registry.sql  0009_ground.sql  0010_ground_governance.sql  0011_chat_log.sql  0012_academy.sql  0013_audit.sql  0014_chat_log_subject.sql  0015_prompt_bundle.sql
docs/: 01-overview.md  02-architecture.md  03-data-model.md  04-api-reference.md  05-operations.md  06-enterprise-playbook.md  07-hardening.md  README.md  USER-GUIDE.md
docs/guides/: 01-discover.md  02-define.md  03-specify.md  04-architect.md  05-plan.md  06-ground.md  07-build.md  08-test.md  09-evaluate.md  10-deploy.md  11-operate.md  12-academy.md
infra/: docker-compose.yml
infra/postgres/: init.sql
orginal-docs/: 00-architecture.md  01-seed-mapping.md  02-build-sequence.md  03-stage-specs.md  04-net-new.md  05-risks-open-questions.md  README.md
py/governance/: pyproject.toml
py/governance/governance/: __init__.py  policy.py  risk.py
py/lineage/: pyproject.toml
py/lineage/lineage/: __init__.py  audit.py  client.py
py/lineage/tests/: test_contract.py
py/providers/: pyproject.toml
py/providers/providers/: __init__.py  embeddings.py
scripts/: launch.sh  oidc-test-issuer.mjs  reset-data.sh  seed-example.sh  seed-h-graph.sh  seed-phase1.sh  seed-phase2.sh  seed-phase4.sh  seed-phase5.sh  seed-phase7.sh  seed_example.py  stop.sh  verify-all.sh  verify-h-audit.sh  verify-h-embed.sh  verify-h-github.sh  verify-h-graph.sh  verify-h-langgraph.sh  verify-h-oidc.sh  verify-h-pii.sh  verify-h-policy.sh  verify-h-retention.sh  verify-hardening.sh  verify-m0.sh  verify-m1.sh  verify-m2.sh  verify-m3.sh  verify-m4.sh  verify-m5.sh  verify-m6.sh  verify-m7.sh  verify-m8.sh  verify_h_audit.py  verify_h_embed.py  verify_h_github.py  verify_h_graph.py  verify_h_langgraph.py  verify_h_oidc.py  verify_h_pii.py  verify_h_policy.py  (+7 more)
services/build-runtime/: pyproject.toml
services/build-runtime/app/: __init__.py  langgraph_runtime.py  main.py  rag.py  runtime.py
services/cost-tracker/: Dockerfile  README.md
services/cost-tracker/client/: pyproject.toml
services/cost-tracker/client/cost_tracker/: __init__.py  client.py  pricing.py
services/cost-tracker/client/cost_tracker_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/cost-tracker/scripts/: backfill.py  seed_demo.py
services/cost-tracker/server/app/: auth.py  db.py  main.py  schemas.py
services/cost-tracker/server/static/: admin.html  admin.js  app.js  index.html  styles.css
services/eval/: pyproject.toml
services/eval/app/: __init__.py  evaluate.py  main.py
services/feedback-tracker/: Dockerfile  README.md
services/feedback-tracker/client/: pyproject.toml
services/feedback-tracker/client/feedback_tracker/: __init__.py  client.py  sentiment.py
services/feedback-tracker/client/widget/: demo.html  feedback-widget.js
services/feedback-tracker/scripts/: backfill.py  seed_demo.py
services/feedback-tracker/server/app/: auth.py  db.py  main.py  schemas.py
services/feedback-tracker/server/static/: admin.html  admin.js  app.js  index.html  styles.css
services/ground/: README.md  pyproject.toml
services/ground/app/: __init__.py  chunk.py  connectors.py  db.py  graph.py  main.py  store.py
services/model-router/: pyproject.toml
services/model-router/app/: __init__.py  accounting.py  db.py  main.py  providers.py  registry.py  router.py  schemas.py
services/optimise/: pyproject.toml
services/optimise/app/: __init__.py  main.py  operate.py
