[project]
name = "agent-platform-workspace"
version = "0.0.0"
description = "Agent Platform — Python workspace root (Phase 0)"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "py/lineage",
    "py/governance",
    "py/providers",
    "services/model-router",
    "services/ground",
    "services/build-runtime",
    "services/eval",
    "services/optimise",
    "services/cost-tracker/client",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
