[project]
name = "governance"
version = "0.0.0"
description = "Governance scanners (PII / injection / classification) — STUBBED interfaces in Phase 0"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["governance"]
