[project]
name = "governance"
version = "0.0.0"
description = "Governance scanners — PII (Presidio + validated regex) / injection / policy / risk"
requires-python = ">=3.12"
dependencies = [
    "presidio-analyzer>=2.2",
    "en-core-web-sm",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["governance"]
