[project]
name = "lineage"
version = "0.0.0"
description = "Artifact + project lineage client (Python) — identical contract to packages/lineage-client"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lineage"]
