[project]
name = "providers"
version = "0.0.0"
description = "Embedding + LLM provider adapters — real ONNX embeddings (fastembed)"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["providers"]
