[project]
name = "model-router"
version = "0.0.0"
description = "Model router service — wraps LiteLLM + prompt/version registry; emits cost/latency"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "litellm>=1.50",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "cost-tracker-client",
]

[tool.uv.sources]
cost-tracker-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
