[project]
name = "model-router"
version = "0.0.0"
description = "Model router service — wraps LiteLLM + prompt/version registry; emits cost/latency"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "litellm>=1.50",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "cost-tracker-client",
]

# Virtual workspace member: deps are installed, but the `app` package is NOT
# installed (run via `uvicorn app.main:app --app-dir services/model-router`),
# avoiding a top-level `app` clash with the other FastAPI services.
[tool.uv]
package = false

[tool.uv.sources]
cost-tracker-client = { workspace = true }
