[project]
name = "cost-tracker-client"
version = "0.1.0"
description = "Fire-and-forget cost event tracking for LLM apps"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cost_tracker*"]
